--- a/sendCs.html
+++ b/sendCs.html
@@ -268,6 +268,43 @@
             });
             allCsData = allCsData.concat(expiredData);
 
+            // '폐기' 상태 테스트를 위한 3개의 샘플 데이터 추가
+            const discardedData = Array.from({ length: 3 }, (_, i) => {
+                const date = new Date(2024, 0, 15 - i); // 1월 15일부터 하루씩 이전 날짜
+                return {
+                    no: 81 + i,
+                    dispatchDate: `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')} 15:00`,
+                    client: '폐기 테스트 고객사',
+                    event: '폐기 처리된 이벤트',
+                    productName: '[테스트] 폐기된 상품',
+                    unitPrice: 1000,
+                    expiryDate: new Date(new Date().setFullYear(new Date().getFullYear() + 1)).toISOString().split('T')[0], // 유효기간은 남음
+                    couponStatus: '폐기', // 쿠폰 상태를 '폐기'로 설정
+                    recipientPhone: `010-0000-000${i + 1}`,
+                    couponNumber: (BigInt("888800000000") + BigInt(i)).toString(),
+                };
+            });
+            allCsData = allCsData.concat(discardedData);
+
+            // '010-9696-0524' 번호로 조회되는 '폐기' 상태 데이터 추가
+            const specialDiscardedData = Array.from({ length: 5 }, (_, i) => {
+                const date = new Date(2024, 2, 10 - i); // 3월 10일부터 하루씩 이전 날짜
+                return {
+                    no: 84 + i,
+                    dispatchDate: `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')} 16:00`,
+                    client: '제이엠비즈콘_스페셜이벤트_고객사하나둘',
+                    event: '폐기된 Congratulations 이벤트',
+                    productName: '[테스트] 폐기된 스타벅스 상품',
+                    unitPrice: 5000,
+                    expiryDate: new Date(new Date().setFullYear(new Date().getFullYear() + 1)).toISOString().split('T')[0], // 유효기간은 남음
+                    couponStatus: '폐기', // 쿠폰 상태를 '폐기'로 설정
+                    recipientPhone: '010-9696-0524',
+                    couponNumber: (BigInt("999900000000") + BigInt(i)).toString(),
+                };
+            });
+            allCsData = allCsData.concat(specialDiscardedData);
+
+
             const searchBtn = document.getElementById('searchBtn');
             const tableBody = document.getElementById('resultsTableBody');
             const totalResultsEl = document.getElementById('totalResults');
