--- a/sendCs.html
+++ b/sendCs.html
@@ -69,7 +69,7 @@
                     </thead>
                     <tbody id="resultsTableBody">
                         <tr>
-                            <td colspan="12">조회된 결과가 없습니다.</td>
+                            <td colspan="11">조회된 결과가 없습니다.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -408,8 +408,9 @@
                         // History Row (if exists)
                         if (hasHistory) {
                             rowsHtml += `
-                                <tr>
-                                    <td colspan="11" class="p-0" style="border: none;">
+                                <tr class="collapse-row">
+                                    <td style="border: none;"></td>
+                                    <td colspan="10" class="p-0" style="border: none;">
                                         <div id="${historyId}" class="collapse">
                                             <div class="p-3" style="background-color: #f8f9fa;">
                                                 <h6 class="mb-2"><i class="fas fa-history me-2"></i>CS 처리 이력</h6>
@@ -444,7 +445,7 @@
                         tableBody.innerHTML = rowsHtml;
                     }
                 } else if (!append) {
-                    tableBody.innerHTML = '<tr><td colspan="12">조회된 결과가 없습니다.</td></tr>';
+                    tableBody.innerHTML = '<tr><td colspan="11">조회된 결과가 없습니다.</td></tr>';
                 }
 
                 const totalCount = displayedResults.length;
