--- a/sendCs.html
+++ b/sendCs.html
@@ -413,7 +413,7 @@
                                     <td colspan="10" class="p-0" style="border: none;">
                                         <div id="${historyId}" class="collapse">
                                             <div class="p-3" style="background-color: #f8f9fa;">
-                                                <h6 class="mb-2"><i class="fas fa-history me-2"></i>CS 처리 이력</h6>
+                                                <h6 class="mb-2 text-start"><i class="fas fa-history me-2"></i>CS 처리 이력</h6>
                                                 <table class="table table-sm table-bordered bg-white mb-0">
                                                     <thead class="table-light">
                                                         <tr>
